finish feature and tours section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,13 +9,17 @@
 @import "base/utilities";
 
 @import "components/buttons";
+@import "components/card";
 @import "components/composition";
+@import "components/feature-box";
 
 @import "layouts/header";
 @import "layouts/grid";
 
 
 @import "modules/box";
+
+@import "pages/home";
 
 
 
