finish navigation and popup

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,9 +16,11 @@
 @import "components/feature-box";
 @import "components/form";
 @import "components/story";
+@import "components/popup";
 
 @import "layouts/header";
 @import "layouts/grid";
+@import "layouts/navigation";
 @import "layouts/footer";
 
 
